--- a/app1/.env
+++ b/app1/.env
@@ -1,1 +1,4 @@
 FERNET_KEY=v3rY6eH4B8EYk3aV1g3z4J7X6rXf5I9Fz6Z8lLJ5T3c=
+# .env
+SECRET_KEY='django-insecure-d^03v@2oio=5k@+*2c3ld382y_-1a$e%4mwt1@xd*=*v0&+)xq'
+DEBUG=True  # Optional: Add other sensitive variables here
